split Services into multiple smaller ones, add movie rating, comment reaction and comments

--- a/api/src/main/resources/db/changelog/changelog-root.yaml
+++ b/api/src/main/resources/db/changelog/changelog-root.yaml
@@ -4,6 +4,6 @@ databaseChangeLog:
   - includeAll:
       path: db/changelog/tables
   - includeAll:
-      path: db/changelog/keys
+      path: db/changelog/constraints
   - includeAll:
       path: db/changelog/data
