--- a/api/src/main/resources/db/changelog/tables/movie-rating.yaml
+++ b/api/src/main/resources/db/changelog/tables/movie-rating.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: JakubPavlicek
       changes:
         - createTable:
-            tableName: gender
+            tableName: movie_rating
             columns:
               - column:
                   name: id
@@ -15,9 +15,18 @@ databaseChangeLog:
                     nullable: false
                     unique: true
               - column:
-                  name: name
-                  type: varchar(15)
-                  defaultValue: 'Unspecified'
+                  name: movie_id
+                  type: varchar(255)
                   constraints:
                     nullable: false
-                    unique: true
+                    foreignKeyName: fk_movie
+              - column:
+                  name: user_id
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: rating
+                  type: double
+                  constraints:
+                    nullable: false
