--- a/api/src/main/resources/db/changelog/data/13-movie-rating.yaml
+++ b/api/src/main/resources/db/changelog/data/13-movie-rating.yaml
@@ -12,10 +12,10 @@ databaseChangeLog:
                   value: "d9f1c6d8-1f48-4f5d-9028-d4a5f1c4f573"
               - column:
                   name: movie_id
-                  value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
+                  value: "1cce6f34-13d2-4a3d-8c7e-8a7659db8a60"
               - column:
                   name: user_id
-                  value: "fa2a986e-8ff1-44ae-9334-34c829f16b5c"
+                  value: "user|66f8511afb3983f9045fc7c9"
               - column:
                   name: rating
                   value: "10"
@@ -28,10 +28,10 @@ databaseChangeLog:
                   value: "e3a1b972-5e60-4e89-b9a4-6a10bde8e4b3"
               - column:
                   name: movie_id
-                  value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
+                  value: "a9c8e9a1-bb24-43b4-9e6b-b38ec61b241d"
               - column:
                   name: user_id
-                  value: "b4d7d9f5-82c4-4531-bd9f-62e09e13a9ff"
+                  value: "user|66f8511afb3983f9045fc7c9"
               - column:
                   name: rating
                   value: "8"
@@ -47,7 +47,7 @@ databaseChangeLog:
                   value: "8c328172-a60f-4ea6-93b1-ca2a5cca2bf0"
               - column:
                   name: user_id
-                  value: "d75c3e82-2673-4294-bef4-6d70a49dfcb5"
+                  value: "user|66f8511afb3983f9045fc7c9"
               - column:
                   name: rating
                   value: "8"
