--- a/api/src/main/resources/db/changelog/data/12-comment-reaction.yaml
+++ b/api/src/main/resources/db/changelog/data/12-comment-reaction.yaml
@@ -15,7 +15,7 @@ databaseChangeLog:
                   value: "c9d6f870-9f9a-4dbf-9079-bb676bc5a1b5"
               - column:
                   name: user_id
-                  value: "fa2a986e-8ff1-44ae-9334-34c829f16b5c"
+                  value: "user|66f8511afb3983f9045fc7c9"
               - column:
                   name: reaction_type
                   value: "like"
@@ -28,10 +28,10 @@ databaseChangeLog:
                   value: "e3a1b972-5e60-4e89-b9a4-6a10bde8e4b3"
               - column:
                   name: comment_id
-                  value: "c9d6f870-9f9a-4dbf-9079-bb676bc5a1b5"
+                  value: "35e4de5b-b805-45b6-b5b5-91b51b9fbb1f"
               - column:
                   name: user_id
-                  value: "b4d7d9f5-82c4-4531-bd9f-62e09e13a9ff"
+                  value: "user|66f8511afb3983f9045fc7c9"
               - column:
                   name: reaction_type
                   value: "like"
@@ -47,7 +47,7 @@ databaseChangeLog:
                   value: "f97bfa82-4b64-48c1-b9b6-b52eec19104f"
               - column:
                   name: user_id
-                  value: "d75c3e82-2673-4294-bef4-6d70a49dfcb5"
+                  value: "user|66f8511afb3983f9045fc7c9"
               - column:
                   name: reaction_type
                   value: "dislike"
